[package]
name = "whitemagic-nexus"
version = "0.1.0"
edition = "2021"
description = "WhiteMagic Nexus — Desktop Application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iceoryx2 = "0.8.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
