[package]
name = "gene-scanner"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "gene-scanner"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
regex = "1.10"
ahash = "0.8"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
