load("//bazel:api.bzl", "modular_py_binary", "modular_py_test", "requirement")

package(default_visibility = ["//visibility:public"])

modular_py_binary(
    name = "generate",
    srcs = glob(
        ["*.py"],
        exclude = ["test_*.py"],
    ),
    imports = ["."],
    deps = [
        requirement("packaging"),
    ],
)

modular_py_test(
    name = "tests",
    srcs = glob(["test_*.py"]),
    deps = [
        ":generate",
        requirement("packaging"),
    ],
)
